--- a/conclusion.tex
+++ b/conclusion.tex
@@ -38,7 +38,7 @@ The Results chapter presented an overview of the electromagnetic behaviour of te
 } 
 \item{Replacing the dielectric layer with an array of metallic wires parallel to the electric field does not qualitatively change the high-frequency behaviour, but below the plasma frequency, it introduces a plasma-like response with negative effective permittivity. The resulting plasma frequency is determined by the geometry; Fig. \ref{fg_omegap_a} compared the numeric results with analytic models, showing a good match.
 } 
-\item{Periodic gaps in the wires introduce the individual resonances with an electric dipole. Their spectra of effective parameters were described in detail, since they are typical also for resonances in other structures. Parametric scans through wire radius and cut distance were shown to have nontrivial effects on the resonance frequency. Our experimental data from cut-wire array on silicon substrate were compared to numerical model, and the difference was explained as an effect of asymmetry and losses in the real sample. 
+\item{Periodic gaps in the wires introduce the individual resonances with an electric dipole. Their spectra of effective parameters were described in detail, since they are typical also for resonances in other structures. Parametric scans through wire radius and cut distance were shown to have nontrivial effects on the resonant frequency. Our experimental data from cut-wire array on silicon substrate were compared to numerical model, and the difference was explained as an effect of asymmetry and losses in the real sample. 
 } 
 \item{The individual resonances with an electric dipole were compared to their counterparts with a magnetic dipole forming the fundamental resonance of split-ring resonators. The resonator with a single splitting in the ring is asymmetric, and it was demonstrated that  erroneous results for this structure are retrieved by any homogenization method that does not account for the asymmetry. The version with a symmetric splitting, however, can be homogenized to obtain negative permeability. Further, a combination of the double-split ring resonator with the wire array was shown to yield the negative index of refraction with compatible results between the s-parameters method a current-driven homogenization.
 } 
