--- a/intro.tex
+++ b/intro.tex
@@ -25,20 +25,20 @@ These deficiencies provide additional reasons to search for the new possibilitie
 
 \section{Goals of the thesis}%{{{
 \begin{enumerate}
-\item{During the preparation of the thesis, its author encountered difficulties finding a focused, accessible, yet rigorous enough tutorial covering the necessary theory. The main aim of the theoretical section therefore lies in bridging the fundamental electrodynamics with the concepts used for a description of metamaterials and photonic crystals.} 
+\item{During the preparation of the thesis, its author realized that it is difficult to find a focused, accessible, yet rigorous enough tutorial covering the necessary theory. The main aim of the theoretical section therefore lies in bridging the fundamental electrodynamics with the concepts used for a description of metamaterials and photonic crystals.} 
 \item{The importance of the more general \textit{spatially-dispersive} electrodynamics is emphasized, although it is unfortunately often neglected in the literature in favour of the simpler \textit{local} electrodynamics. Both approaches are compared throughout the thesis.} 
-\item{The third aim of this thesis is to promote the unification of paradigms, i.e. \textit{photonic crystals}, \textit{metamaterials} and \textit{media of unusual parameters}, by showing that they can -- and should -- be described by the same theoretical approaches. This is supported by elaborating the concept of spatial dispersion in the theoretical section and by providing historical review of the surprisingly long parallel development of such structures.} 
+\item{The third aim of this thesis is to promote the unification of paradigms, i.e. \textit{photonic crystals}, \textit{metamaterials}, by showing that they can -- and should -- be described by the same theoretical approaches. This is supported by elaborating the concept of spatial dispersion in the theoretical section and by providing historical review of the surprisingly long parallel development of such structures.} 
 \item{A overview of the electromagnetic behaviour of diverse periodic structures is provided in the Results section, taking into account also the properties of materials available for THz photonics, with the realistic level of absorption in particular. This section is more than just results -- proceeding from simpler structures to the more complex ones, it aims to explain all observed phenomena in a didactic manner. Some of the simulations are verified against the experimental results from the terahertz measurements.} 
-\item{Last but not least, the numerical results present a small demonstration of the use of the extensive simulation scripts, which were developed solely for the thesis and are published online free of charge. The basic concepts of the numerical simulations are described to help others in adapting the simulations for their further research. } 
+\item{Last but not least, the numerical results present a small demonstration of the use of the extensive simulation scripts, which were developed during the doctoral project and were published online for the scientific community. The basic concepts of the numerical simulations are described to help others in adapting the simulations for their further research. } 
 \end{enumerate}
 %}}}
 \section{Thesis outline}
 \paragraph{Theory} %{{{
-The theoretical chapter starts with a review of linear \textit{electrodynamics of continuous media}; the concepts of harmonic oscillators, dispersion curves, and isofrequency contours are introduced. The generalized index of refraction is introduced, and it is demonstrated how the wave refraction depends on the shape of isofrequency contours.
+The theoretical chapter starts with a review of linear \textit{electrodynamics of continuous media}; the concepts of harmonic oscillators, dispersion curves, isofrequency contours and  the generalized index of refraction are introduced, and it is demonstrated how the wave refraction depends on the shape of isofrequency contours.
 %Many related topics, such as nonlinearity, optical activity and gyrotropy are not discussed here, as they are not essential for the selection of structures in rest of the thesis. 
 
-The electrodynamic theory is generalized to account for the \textit{nonlocal} response, or equivalently \textit{spatial dispersion}, in the medium -- a phenomenon which can be usually neglected in the natural media, but is of key importance in any conscientious treatise on electrodynamics of periodic structures.
-The more general Landau-Lifshitz formulation of nonlocal medium parameters is also introduced and shown to result in the same dispersion as the customary model.  
+The electrodynamic theory is generalized to account for the \textit{nonlocal} response, or equivalently \textit{spatial dispersion}, in the medium -- a phenomenon which can be usually neglected in natural media, but is of key importance in any conscientious treatise on electrodynamics of periodic structures.
+The more general Landau-Lifshitz formulation of nonlocal medium parameters is also introduced and shown to be compatible with the customary model.  
 
 The third part of the theoretical section is dedicated to periodic structures, starting with the Bloch theorem that enables one to transfer some of the concepts from continuous optics even to waves propagating in periodic structures. Its impact on the form of dispersion curves and on the ambiguity of the wave vector is shown.
 
