--- a/numeric.tex
+++ b/numeric.tex
@@ -107,7 +107,7 @@ An illustration of a complex permittivity spectrum for titanium dioxide in its r
 
 The author has observed that $f_c$ determines the constraints for the simulation stability simultaneously in two ways:
 \begin{enumerate}
- \item{The resonance frequencies must be lower than the critical frequency,  %% TODO get a proof, or some citation, or cite MEEP sources where S.G.Johnson wrote a routine about this
+ \item{The resonant frequencies of all Lorentzians must be lower than the critical frequency,  %% TODO get a proof, or some citation, or cite MEEP sources where S.G.Johnson wrote a routine about this
 \begin{equation} \frac{\omega_{0m}}{2\pi} < f_c, \text{ for all oscillators, } % \forall m \in \{1,2 \ldots M\}, \label{eq_fdtd_stability}
 \end{equation}
 regardless of the strength $F_m$ or damping rate $\gamma_m$ of the oscillator. 
