--- a/expe.tex
+++ b/expe.tex
@@ -85,7 +85,7 @@ The terahertz beam is relatively tightly focused, and the focus of the echoes is
 The deconvolution algorithm can compensate for slight focus displacement by changing the amplitude  of different frequency components, or shifting them in phase. 
 
 However, due to the hyperbolic shape of the gaussian beam, with its Rayleigh length $z_{R}$ being similar to the sapphire thickness\footnote{As an approximate example, for the main frequency component $f =$ 1.5~THz with wavelength $\lambda = c / f \approx 200$~$\upmu$m, for $\vartheta \lesssim 0.15$ rad as an estimated divergence of the beam from its axis, the Rayleigh half-length of a gaussian beam would be $z_{R} = \frac{\lambda}{\pi \vartheta^{2}} \gtrsim 2.8$ mm, i.e. roughly the thickness of the thinner sapphire.}, the overall effect of two sapphires can not be linearly compensated from two separate measurements of each of them.} 
- \item{The possible asymmetry of the sample with regard to the beam axis can substantially bias the measured reflectance. This happened during the characterisation of the dielectric spheres, when the sapphire distance was defined by a $\approx$60$\upmu$m teflon spacer. The nonuniform size of the resonators required us to attach them to one of the sapphire windows. While the spheres with the 60$\upmu$m diameter were placed symmetrically in the gap, the smaller spheres had an asymmetric position. Since the latter have higher resonance frequencies, the effect of asymmetry was probably also frequency dependent. } 
+ \item{The possible asymmetry of the sample with regard to the beam axis can substantially bias the measured reflectance. This happened during the characterisation of the dielectric spheres, when the sapphire distance was defined by a $\approx$60$\upmu$m teflon spacer. The nonuniform size of the resonators required us to attach them to one of the sapphire windows. While the spheres with the 60$\upmu$m diameter were placed symmetrically in the gap, the smaller spheres had an asymmetric position. Since the latter have higher resonant frequencies, the effect of asymmetry was probably also frequency dependent. } 
  \item{The sapphire slabs can influence the near field of resonances in some samples, c.f. Sect. \ref{par_nearfield}. This error should not be significant in transversally homogeneous samples (i.e. slabs), nor in samples that are made of dielectrics with much higher permittivity than that of sapphire. However for some samples, such as metallic resonators, the spectra are be completely changed in the vicinity of a dielectric (see its application on a fishnet sample in Fig. 4.19 in Ref. \cite{yahiaoui2011phd}). }
  \item{Finally, it follows from Eq. (\ref{eq_Neff}) that reliable reflection data can only be retrieved at frequencies where also the transmittance amplitude is strong enough for the signal not to be dominated by noise. }
  \end{enumerate}
@@ -127,7 +127,7 @@ For clarity, some limiting-case examples of the ellipsoid projection and the equ
 \end{figure}
 In the following, the dielectric particles are approximated by ellipsoids with three (generally different) half-axes $$\rho_a \leq \rho_b \leq \rho_c.$$ For the purpose of sieving, only the values of the shortest two half-axes, $\rho_a$ and $\rho_b$, decide whether the particle can pass through the sieve. The longest ellipsoid half-axis $\rho_c$ does not affect this, although it may influence the sieving speed. Therefore we can represent each three-dimensional particle with its projection on the smallest possible ellipse, which is described by its \textit{minor axis} $\equiv 2\rho_a$, and by its \textit{major axis} $\equiv 2\rho_b$ (which is, in fact, the \textit{medium axis} of the ellipsoid). For a given shape of a hole in a homogeneous flat sieve, it is easy to determine which values of minor and major ellipse axes allow a particle to pass through, and which not. For a square sieve such area in the parameter space forms a disk around the center of origin (Fig. \ref{fg_sieve_pass_notpass}a). It can be shown that when the sieve is diagonally stretched, forming a lozenge-shaped hole, the area of spheres allowed to pass transforms into an ellipse (Fig. \ref{fg_sieve_pass_notpass}b). When the hole shape is circular or elliptical, it is obvious that the area forms a part of a square or of a rectangle, respectively  (Fig. \ref{fg_sieve_pass_notpass}c,d).
 
-The resonance frequency of a dielectric resonator depends on all three half-axes, $\rho_a \leq \rho_b \leq \rho_c$. In order to select a size fraction as narrow as possible, one has to use double sieving: the above sieve not allowing the fraction of particles too big, the bottom sieve removing the fraction of particles too small. This is where the anisotropic hole shapes become useful -- the bottom sieve can exclude also all oblong particles with the difference of $\rho_a \leq \rho_b$ too big. This effect is illustrated in Fig. \ref{fg_double_sieving}, which also presents a comparison between using more usual sieves with square/lozenge holes and the approach with a pair of sieves with micromachined square/elliptical holes. Obviously, the latter approach better discriminates between the \textit{shapes} of the ellipsoids. This advantage further gains on importance when the anisotropy of the sieve is low.
+The resonant frequency of a dielectric resonator depends on all three half-axes, $\rho_a \leq \rho_b \leq \rho_c$. In order to select a size fraction as narrow as possible, one has to use double sieving: the above sieve not allowing the fraction of particles too big, the bottom sieve removing the fraction of particles too small. This is where the anisotropic hole shapes become useful -- the bottom sieve can exclude also all oblong particles with the difference of $\rho_a \leq \rho_b$ too big. This effect is illustrated in Fig. \ref{fg_double_sieving}, which also presents a comparison between using more usual sieves with square/lozenge holes and the approach with a pair of sieves with micromachined square/elliptical holes. Obviously, the latter approach better discriminates between the \textit{shapes} of the ellipsoids. This advantage further gains on importance when the anisotropy of the sieve is low.
 
 \begin{figure}[ht] \caption{Application of the effect from Fig. \ref{fg_sieve_pass_notpass} for separating a narrow fraction of ellipsoids between the sieves. Both combinations of \textbf{(a)} square-rectangular and \textbf{(b)} circular-elliptic sieves can be used, with the latter one promising better selectivity also in terms of the particle aspect ratio.} \label{fg_double_sieving} \centering 
 \includegraphics[width=\textwidth]{img/technology/sieve_double_sieving_fractions.pdf}
